--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==1.10.3
 django-cors-headers==1.2.2
--e git+git@github.com:Stufinite/djangoApiDec.py.git@7d8c5beaad6d89b26a97f65c25929515b267ffe9#egg=djangoApiDec
+-e git://github.com/Stufinite/djangoApiDec.git@master#egg=djangoApiDec
 jieba==0.38
 pymongo==3.4.0
 requests==2.11.1
