--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,12 @@ python:
   - 3.3
   - 3.4
   - 3.5
+  - 3.6
+services:
+  - mongodb
 install:
   - pip install -r requirements.txt
 script:
-  - python manage.py insertArticles testData/Hate-1000-1001.json 
+  - sleep 15
+  - python manage.py insertArticles testData/Hate-1000-1001.json
   - python manage.py test
