--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ language: python
 # add this line.
 # sudo: required
 python:
-  - 3.2
   - 3.3
   - 3.4
   - 3.5
@@ -11,6 +10,9 @@ python:
 services:
   - mongodb
 install:
+  - apt-get install build-essential python3-dev python3-setuptools \
+                     python3-numpy python3-scipy \
+                     libatlas-dev libatlas3gf-base
   - pip install -r requirements.txt
 script:
   - sleep 15
