--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
 services:
   - mongodb
 install:
-  - apt-get install build-essential python3-dev python3-setuptools \
+  - sudo apt-get install build-essential python3-dev python3-setuptools \
                      python3-numpy python3-scipy \
                      libatlas-dev libatlas3gf-base
   - pip install -r requirements.txt
