--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ services:
   - mongodb
 install:
   - sudo apt-get install build-essential python3-dev python3-setuptools \
-                     python3-numpy python3-scipy \
+                     python3-numpy \
                      libatlas-dev libatlas3gf-base
   - pip install -r requirements.txt
 script:
