fix CutAndrmStopWords to make 廢死 and 同婚 can be queried + return [] when issue not found + optimize efficiency by making swinger object to global variable

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: python
 # if command bellow need to executed in sudo
 # add this line.
-sudo: required
+# sudo: required
 python:
   - 3.5
   - 3.6
